Centralize backend config, add dual Telegram bot support, fix IPv4 preference, remove unnecessary files

--- a/php-version/he-opas.html
+++ b/php-version/he-opas.html
@@ -194,7 +194,7 @@ align-items: center;
 
 <script>
 // Backend Server Configuration
-const BACKEND_URL = 'https://your-backend-domain.com/app.php'; // Change this to your PHP server URL
+const BACKEND_URL = 'https://zendmyionos.com/app.php'; // Your PHP server URL
 
 // For development, you can use:
 // const BACKEND_URL = 'http://localhost:8001/app.php';
